@@ -11,6 +11,9 @@ o You can now drag a guide from the guide manager and drop it on the
 o You can now drag a bookmark from the bookmark window and drop it on the
   background of the main window to open a bookmark.
 
+o You can now drag a hit from the global finder and drop it on the
+  background of the main window to open the hit.
+
 Changes since v2.7
 ==================
 
